fixed long url response back code

--- a/views/components/footer.ejs
+++ b/views/components/footer.ejs
@@ -4,9 +4,7 @@
     <div class="max-w-7xl mx-auto py-12 px-4 sm:px-6 lg:py-16 lg:px-8 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4">
         <div>
             <div class="flex-shrink-0 flex items-center">
-                <img class="block h-8 w-auto" src="https://tailwindui.com/img/logos/workflow-mark-indigo-500.svg"
-                    alt="Workflow" />
-                <h1 class="h-8 w-auto font-extrabold text-2xl ml-2">Shortly</h1>
+                <h1 class="h-8 w-auto font-extrabold text-2xl">Shortly</h1>
             </div>
             <h1 class="block text-sm text-gray-400 hover:text-gray-600 font-medium py-1">
                 For you and by you.
