--- a/views/components/newurl.ejs
+++ b/views/components/newurl.ejs
@@ -62,68 +62,29 @@
                 <div class="rounded-md px-6 py-3 shadow-sm">
                     <h1 class="text-xl font-semibold text-stone text-center">Your Recent Urls</h1>
                 </div>
-                <div class="overflow-y-visible border-2 border-gray-200 rounded-md shadow">
+                <!-- <div class="overflow-y-visible border-2 border-gray-200 rounded-md shadow">
                     <div class="py-4 pl-2">
                         <div class="grid grid-flow-row gap-2">
 
                             <div class="">
                                 <label for="copy-box"
-                                    class="pl-8 my-0.5 block max-w-min rounded-md bg-white font-semibold text-sm text-stone-400">https://www.google.com/xyz...</label>
-                                <input id="remember-me" name="remember-me" type="checkbox"
-                                    class="h-4 w-4 text-indigo-600 focus:ring-indigo-500 border-gray-300 rounded">
-                                <label for="remember-me" class="ml-2 inline-block text-sm text-gray-900">
-                                    <div
-                                        class="pl-1 inline-block bg-white border-2 border-violet-400 rounded-md shadow w-fit">
-                                        <input id="copy" type="text" value="https://www.short.ly/fs8d7s3fjt6" disabled
-                                            class="border-0 p-2 text-sm font-semibold text-gray-800">
-                                        <button onclick="copy()" id="copyicon" class=""><i
-                                                class="fas fa-copy p-2 font-semibold text-gray-400 hover:text-gray-600"></i></button>
-                                        <button class="hidden" id="copydoneicon"><i
-                                                class="fas fa-check-circle p-2 font-semibold text-green-600"></i></button>
-                                    </div>
+                                    class="my-0.5 block max-w-min rounded-md bg-white font-semibold text-sm text-stone-400">https://www.google.com/xyz...</label>
+                                <div
+                                    class="pl-1 inline-block bg-white border-2 border-violet-400 rounded-md shadow w-fit">
+                                    <input id="copy" type="text" value="https://www.short.ly/fs8d7s3fjt6" disabled
+                                        class="border-0 p-2 text-sm font-semibold text-gray-800">
+                                    <button onclick="copy()" id="copyicon" class=""><i
+                                            class="fas fa-copy p-2 font-semibold text-gray-400 hover:text-gray-600"></i></button>
+                                    <button class="hidden" id="copydoneicon"><i
+                                            class="fas fa-check-circle p-2 font-semibold text-green-600"></i></button>
+                                </div>
                             </div>
 
                             <hr class="border-1 border-stone-200 bg-stone-200 my-1">
-
-                            <div class="">
-                                <label for="copy-box"
-                                    class="pl-8 my-0.5 block max-w-min rounded-md bg-white font-semibold text-sm text-stone-400">https://www.google.com/xyz...</label>
-                                <input id="remember-me" name="remember-me" type="checkbox"
-                                    class="h-4 w-4 text-indigo-600 focus:ring-indigo-500 border-gray-300 rounded">
-                                <label for="remember-me" class="ml-2 inline-block text-sm text-gray-900">
-                                    <div
-                                        class="pl-1 inline-block bg-white border-2 border-violet-400 rounded-md shadow w-fit">
-                                        <input id="copy" type="text" value="https://www.short.ly/fs8d7s3fjt6" disabled
-                                            class="border-0 p-2 text-sm font-semibold text-gray-800">
-                                        <button onclick="copy()" id="copyicon" class=""><i
-                                                class="fas fa-copy p-2 font-semibold text-gray-400 hover:text-gray-600"></i></button>
-                                        <button class="hidden" id="copydoneicon"><i
-                                                class="fas fa-check-circle p-2 font-semibold text-green-600"></i></button>
-                                    </div>
-                            </div>
-
-                            <hr class="border-1 border-stone-200 bg-stone-200 my-1">
-
-                            <div class="">
-                                <label for="copy-box"
-                                    class="pl-8 my-0.5 block max-w-min rounded-md bg-white font-semibold text-sm text-stone-400">https://www.google.com/xyz...</label>
-                                <input id="remember-me" name="remember-me" type="checkbox"
-                                    class="h-4 w-4 text-indigo-600 focus:ring-indigo-500 border-gray-300 rounded">
-                                <label for="remember-me" class="ml-2 inline-block text-sm text-gray-900">
-                                    <div
-                                        class="pl-1 inline-block bg-white border-2 border-violet-400 rounded-md shadow w-fit">
-                                        <input id="copy" type="text" value="https://www.short.ly/fs8d7s3fjt6" disabled
-                                            class="border-0 p-2 text-sm font-semibold text-gray-800">
-                                        <button onclick="copy()" id="copyicon" class=""><i
-                                                class="fas fa-copy p-2 font-semibold text-gray-400 hover:text-gray-600"></i></button>
-                                        <button class="hidden" id="copydoneicon"><i
-                                                class="fas fa-check-circle p-2 font-semibold text-green-600"></i></button>
-                                    </div>
-                            </div>
 
                         </div>
                     </div>
-                </div>
+                </div> -->
 
             </div>
             <!-- data element ends -->
