landing page recent url section

--- a/views/components/newurl.ejs
+++ b/views/components/newurl.ejs
@@ -58,34 +58,11 @@
                 </div>
             </form>
             <!-- url data element -->
-            <div class="sm:col-span-1 lg:col-span-2 bg-white px-2">
+            <div id="recent-url-container" class="sm:col-span-1 lg:col-span-2 bg-white px-2 hidden sm:block">
                 <div class="rounded-md px-6 py-3 shadow-sm">
-                    <h1 class="text-xl font-semibold text-stone text-center">Your Recent Urls</h1>
+                    <h1 class="text-4xl font-semibold text-stone-400 text-center font-comforter">Your recent urls</h1>
                 </div>
-                <!-- <div class="overflow-y-visible border-2 border-gray-200 rounded-md shadow">
-                    <div class="py-4 pl-2">
-                        <div class="grid grid-flow-row gap-2">
-
-                            <div class="">
-                                <label for="copy-box"
-                                    class="my-0.5 block max-w-min rounded-md bg-white font-semibold text-sm text-stone-400">https://www.google.com/xyz...</label>
-                                <div
-                                    class="pl-1 inline-block bg-white border-2 border-violet-400 rounded-md shadow w-fit">
-                                    <input id="copy" type="text" value="https://www.short.ly/fs8d7s3fjt6" disabled
-                                        class="border-0 p-2 text-sm font-semibold text-gray-800">
-                                    <button onclick="copy()" id="copyicon" class=""><i
-                                            class="fas fa-copy p-2 font-semibold text-gray-400 hover:text-gray-600"></i></button>
-                                    <button class="hidden" id="copydoneicon"><i
-                                            class="fas fa-check-circle p-2 font-semibold text-green-600"></i></button>
-                                </div>
-                            </div>
-
-                            <hr class="border-1 border-stone-200 bg-stone-200 my-1">
-
-                        </div>
-                    </div>
-                </div> -->
-
+                <div id="recent-urls"></div>
             </div>
             <!-- data element ends -->
         </div>
