--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -23,3 +23,13 @@
     from {bottom: 32px; opacity: 1;}
     to {bottom: 0; opacity: 0;}
   }
+
+  /* for homepage recent url section */
+  .list-none__item{
+    overflow-y: visible;
+    border: 2px solid #e5e7eb;
+    border-radius: 6px;
+    margin: 4px 0;
+    padding: 8px;
+    filter: drop-shadow(0 1px 2px rgb(0 0 0 / 0.1)) drop-shadow(0 1px 1px rgb(0 0 0 / 0.06));
+  }
