--- a/views/components/signup.ejs
+++ b/views/components/signup.ejs
@@ -1,9 +1,9 @@
 <!-- signup -->
-<div class="min-h-full flex items-center justify-center py-12 px-4 sm:px-6 lg:px-8 bg-hero-pattern bg-center bg-cover">
-    <div class="max-w-sm w-full space-y-8 px-6 sm:px-6 lg:px-8 py-12 bg-gray-50 rounded-md shadow">
+<div class="min-h-full flex items-center justify-center py-8 px-4 sm:px-6 lg:px-8 bg-hero-pattern bg-center bg-cover">
+    <div class="max-w-sm w-full space-y-6 px-6 sm:px-6 lg:px-8 py-8 bg-gray-50 rounded-md shadow">
         <div>
-            <h2 class="mt-6 text-center text-3xl font-extrabold text-gray-900">
-                Create your account
+            <h2 class="text-center text-3xl font-extrabold text-gray-900">
+                Create account
             </h2>
             <p class="mt-2 text-center text-sm text-gray-600">
                 Or
@@ -12,7 +12,7 @@
                 </a>
             </p>
         </div>
-        <form class="mt-8 space-y-6" action="/signup" method="POST">
+        <form class="space-y-6" action="/signup" method="POST">
             <input type="hidden" name="remember" value="true">
             <div class="rounded-md shadow-sm -space-y-px">
                 <div class="py-1">
