--- a/views/components/newurl.ejs
+++ b/views/components/newurl.ejs
@@ -1,7 +1,7 @@
 <div class="py-12">
     <div class="h-gutter py-4">
-        <div class="bg-blue-50 rounded-md shadow grid grid-cols-1 sm:grid-flow-col sm:grid-cols-2 lg:grid-cols-3 gap-4">
-            <form id="myForm" class="px-2 py-6 space-y-6">
+        <div class="bg-slate-50 grid grid-cols-1 sm:grid-flow-col sm:grid-cols-2 lg:grid-cols-3 gap-2">
+            <form id="myForm" class="px-4 py-6 space-y-6 rounded-md shadow h-fit">
                 <div class="relative pb-12">
                     <h1 class="-rotate-3 font-extrabold text-4xl text-gray-400 block font-comforter">Your url, your
                         way:)</h1>
@@ -13,16 +13,16 @@
                         Shorten link</h1>
                 </div>
                 <div>
-                    <label for="longUrl" class="font-semibold text-sm text-gray-600 py-1 block">Enter the long
+                    <label for="longUrl" class="text-sm text-gray-600 py-1 block">Enter the long
                         url</label>
                     <input type="url" name="longUrl" required id="longUrl" placeholder="https://example.com"
-                        class="py2 appearance-none rounded-md relative block w-full px-3 py-2 border border-gray-300 text-gray-900 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm placeholder:text-sm placeholder:font-semibold placeholder:text-gray-400">
+                        class="py2 appearance-none rounded-md relative block w-full px-3 py-2 border border-gray-300 focus:outline-none focus:ring-indigo-50 focus:border-indigo-500 sm:text-sm placeholder:text-sm placeholder:text-gray-400">
                 </div>
 
                 <div id="shortUrlDiv" class="hidden">
-                    <label for="shortUrl" class="font-semibold text-sm text-gray-600 py-1 block">Shortend url</label>
+                    <label for="shortUrl" class="text-sm text-gray-600 py-1 block">Shortend url</label>
                     <input type="text" id="shortUrl" value="Short url will go here..." disabled
-                        class="bg-emerald-600 py2 appearance-none rounded-md relative block w-full px-3 py-2 border border-gray-200 sm:text-sm text-sm font-semibold text-white">
+                        class="bg-emerald-600 py2 appearance-none rounded-md relative block w-full px-3 py-2 border border-gray-200 sm:text-sm text-sm text-white">
                     <div class="my-4">
                         <span onclick="copy()" id="copyicon"
                             class=" shadow border p-2 rounded-md group hover:border-gray-200 hover:border-b-2 hover:border-r-2"><i
@@ -49,16 +49,16 @@
                 </div>
 
                 <button type="submit"
-                    class="border-2 font-semibold text-sm rounded-md block w-full py-2 px-4 border-transparent text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">Shorten
+                    class="border-2 text-sm rounded-md block w-full py-2 px-4 border-transparent text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">Shorten
                 </button>
 
                 <div>
-                    <h1 class="text-sm font-semibold text-gray-400">By continuing you agree to <a
+                    <h1 class="text-sm text-gray-400">By continuing you agree to <a
                             class="text-indigo-400">terms & policies</a></h1>
                 </div>
             </form>
             <!-- url data element -->
-            <div id="recent-url-container" class="sm:col-span-1 lg:col-span-2 bg-white px-2 hidden sm:block">
+            <div id="recent-url-container" class="sm:col-span-1 lg:col-span-2 bg-white px-4 hidden sm:block rounded-md shadow overflow-y-scroll max-h-96">
                 <div class="rounded-md px-6 py-3 shadow-sm">
                     <h1 class="text-4xl font-semibold text-stone-400 text-center font-comforter">Your recent urls</h1>
                 </div>
